--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-  "version": 2,
-  "builds": [
+  "routes": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
+      "src": "/api/(.*)",
+      "dest": "/api/generate-pdf",
+      "methods": ["POST", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+      }
     }
   ]
 }
