--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "puppeteer": "^23.1.0"
+    "puppeteer-core": "^23.1.0"
   }
 }
