--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "puppeteer-core": "^23.1.0"
+    "puppeteer": "^23.1.0",
+    "puppeteer-core": "^23.5.3"
   }
 }
